[package]
name = "kirby-krackle"
version = "0.1.0"
authors = ["Spocuto"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlElement',
  'Window',
  'HtmlCanvasElement',
]

[dependencies.getrandom]
features = ["js"]